add openapi dockerfile trace
