# cmd/server/docs/swagger.json
@@ -38,7 +38,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.TExample"
+                                "$ref": "#/definitions/model.Example"
                             }
                         }
                     }
@@ -72,7 +72,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TExample"
+                            "$ref": "#/definitions/model.Example"
                         }
                     },
                     "400": {
@@ -115,17 +115,20 @@
                 }
             }
         },
-        "model.TExample": {
+        "model.Example": {
             "type": "object",
             "properties": {
-                "car_type": {
+                "CarType": {
                     "type": "integer"
                 },
-                "id": {
-                    "type": "integer"
+                "ff": {
+                    "type": "string"
                 },
                 "name": {
                     "description": "Name",
+                    "type": "string"
+                },
+                "userID": {
                     "type": "string"
                 }
             }
